<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/LLnumberLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_phone_number_otp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/dummy_phone_number"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/iv_change_number"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_create_24"/>
    </LinearLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_enter_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy_extrabold"
        android:text="@string/enter_otp_text"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/LLnumberLayout"
        app:layout_constraintStart_toStartOf="@+id/LLnumberLayout"
        app:layout_constraintTop_toBottomOf="@+id/LLnumberLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/tv_enter_phone"
        app:layout_constraintStart_toStartOf="@+id/tv_enter_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_phone">



        <EditText
            android:id="@+id/et_otp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border"
            android:cursorVisible="false"
            android:ems="4"
            android:maxLength="4"
            android:fontFamily="@font/gilroy_extrabold"
            android:inputType="none|numberSigned"
            android:padding="10dp"
            android:text="@string/dummy_otp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/materialTextView"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_continue_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/gilroy_semibold"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tv_otp_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/gilroy_semibold"
        android:text="00:59"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_continue_otp"
        app:layout_constraintStart_toEndOf="@+id/bt_continue_otp"
        app:layout_constraintTop_toTopOf="@+id/bt_continue_otp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/yellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
